--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^6.12.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "postcss": "^8.4.35"
+    "postcss": "^8.4.35",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "concurrently": "^7.5.0",
