--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "follow-redirects": "^1.15.6",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.12.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "postcss": "^8.4.35",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "webpack-dev-middleware": "^7.1.1"
   },
   "devDependencies": {
     "concurrently": "^7.5.0",
